--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
     "@types/connect-redis": "^0.0.18",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/node": "^14.18.4",
@@ -27,6 +28,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "connect-redis": "^6.1.1",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "redis": "^4.0.4"
